# openglChess

./: CMakeLists.txt  Makefile  game.cpp  game.h  main.cpp  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  spriteRenderer.cpp  spriteRenderer.h  texture.cpp  texture.h
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: sprite.frag  sprite.vs
