cmake_minimum_required(VERSION 3.10)
project(openGL)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(SOURCES main.cpp game.cpp resource_manager.cpp shader.cpp texture.cpp spriteRenderer.cpp stb_image_wrapper.cpp)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory(glfw-3.4)
add_library(glad glad/src/glad.c)
target_include_directories(glad PUBLIC glad/include)
add_executable(main ${SOURCES})
target_link_libraries(main glfw glad)
target_include_directories(main PUBLIC glad/include)
target_include_directories(main PUBLIC glfw/include)


